10-Tool sequence plot

--- a/10-ReAct/Aula_9_10_ReAct.ipynb
+++ b/10-ReAct/Aula_9_10_ReAct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import re\n",
     "import abc\n",
     "import warnings\n",
+    "import collections\n",
     "from typing import Optional, Dict, Tuple\n",
     "\n",
     "import torch #spacy não carrega sem importar antes (??)\n",
@@ -2182,21 +2183,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_queue = collections.deque()\n",
+    "node_queue.append(\"\")\n",
+    "\n",
+    "adj_list = {}\n",
+    "\n",
+    "while len(node_queue) != 0:\n",
+    "    current_node = node_queue.pop()\n",
+    "\n",
+    "    if current_node in adj_list:\n",
+    "        continue\n",
+    "\n",
+    "    adj = []\n",
+    "\n",
+    "    total_occurrences = 0\n",
+    "    n_sequence = 0\n",
+    "    sequences = {}\n",
+    "    for i in range(len(tool_sequences_unique)):\n",
+    "        sequence = tool_sequences_unique[i]\n",
+    "        occurrences = tool_sequences_count[i]\n",
+    "        \n",
+    "        if len(sequence) > len(current_node):\n",
+    "            if sequence[:len(current_node)] != current_node:\n",
+    "                continue\n",
+    "            \n",
+    "            total_occurrences += occurrences\n",
+    "\n",
+    "            next_char = sequence[len(current_node)]\n",
+    "\n",
+    "            if next_char in sequences:\n",
+    "                sequences[next_char] += occurrences\n",
+    "                \n",
+    "            else:\n",
+    "                sequences[next_char] = occurrences\n",
+    "\n",
+    "                if current_node+next_char not in node_queue:\n",
+    "                    node_queue.append(current_node+next_char)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    for sequence in sequences:\n",
+    "        sequences[sequence] /= total_occurrences\n",
+    "    adj_list[current_node] = sequences\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'F'"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flowchart LR\n",
+      "'' -->|F 2%| F\n",
+      "'' -->|R 98%| R\n",
+      "R -->|S 100%| RS\n",
+      "RS -->|R 100%| RSR\n",
+      "RSR -->|A 32.65%| RSRA\n",
+      "RSR -->|S 4.08%| RSRS\n",
+      "RSR -->|T 63.27%| RSRT\n",
+      "RSRT -->|R 100%| RSRTR\n",
+      "RSRTR -->|A 80.65%| RSRTRA\n",
+      "RSRTR -->|S 19.35%| RSRTRS\n",
+      "RSRTRS -->|R 100%| RSRTRSR\n",
+      "RSRTRSR -->|A 50%| RSRTRSRA\n",
+      "RSRTRSR -->|S 16.67%| RSRTRSRS\n",
+      "RSRTRSR -->|T 33.33%| RSRTRSRT\n",
+      "RSRTRSRT -->|A 100%| RSRTRSRTA\n",
+      "RSRTRSRS -->|A 100%| RSRTRSRSA\n",
+      "RSRS -->|R 100%| RSRSR\n",
+      "RSRSR -->|A 100%| RSRSRA\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"flowchart LR\")\n",
+    "\n",
+    "for node in adj_list:\n",
+    "    for next_char in adj_list[node]:\n",
+    "        node_to_print = node\n",
+    "\n",
+    "        if node_to_print == \"\":\n",
+    "            node_to_print = \"''\"\n",
+    "\n",
+    "        probability = adj_list[node][next_char]\n",
+    "        probability *= 100\n",
+    "        probability = round(probability, 2)\n",
+    "\n",
+    "        if int(probability) == probability:\n",
+    "            probability = int(probability)\n",
+    "\n",
+    "        next_node = node+next_char\n",
+    "        print(f\"{node_to_print} -->|{next_char} {probability}%| {next_node}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Renderizando o diagrama em [Mermaid Live Editor](https://mermaid.live/):\n",
+    "\n",
+    "[Disponível online](https://mermaid.ink/img/pako:eNptkkFrgzAYhv_KR2D00gZnVms9DITR03bxyzGXoOkqqzqyyBht__tSo0ldd0ue5-P9XkhOpOwqRTKyP3bf5UFqA6-FaBcLWK2ezzuIH86w8_cCtqkFdqAY7giPUXQFaAmOIxO6TqGby4HFNFk7nAeO8ESj1GEMmEPCaLxxnA-c_w3nLp5PC9LIL-DjCu5LbinzDkeH94k4Zfra6xuXz6WNTWiyCR7nngNjlLHgufd8TJ-t5iEf__Po_F3tsbSvfCNysiSN0o2sK_vCJ9ECCGIOqlGCZPZYSf0hiGgvdk72psOftiSZ0b1akv6zkka91PJdy4Zke3n8slRVten0m_syw8-5_AJB36Zj?type=png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](https://mermaid.ink/img/pako:eNptkkFrgzAYhv_KR2D00gZnVms9DITR03bxyzGXoOkqqzqyyBht__tSo0ldd0ue5-P9XkhOpOwqRTKyP3bf5UFqA6-FaBcLWK2ezzuIH86w8_cCtqkFdqAY7giPUXQFaAmOIxO6TqGby4HFNFk7nAeO8ESj1GEMmEPCaLxxnA-c_w3nLp5PC9LIL-DjCu5LbinzDkeH94k4Zfra6xuXz6WNTWiyCR7nngNjlLHgufd8TJ-t5iEf__Po_F3tsbSvfCNysiSN0o2sK_vCJ9ECCGIOqlGCZPZYSf0hiGgvdk72psOftiSZ0b1akv6zkka91PJdy4Zke3n8slRVten0m_syw8-5_AJB36Zj?type=png)](https://mermaid.live/edit#pako:eNptkkFrgzAYhv_KR2D00gZnVms9DITR03bxyzGXoOkqqzqyyBht__tSo0ldd0ue5-P9XkhOpOwqRTKyP3bf5UFqA6-FaBcLWK2ezzuIH86w8_cCtqkFdqAY7giPUXQFaAmOIxO6TqGby4HFNFk7nAeO8ESj1GEMmEPCaLxxnA-c_w3nLp5PC9LIL-DjCu5LbinzDkeH94k4Zfra6xuXz6WNTWiyCR7nngNjlLHgufd8TJ-t5iEf__Po_F3tsbSvfCNysiSN0o2sK_vCJ9ECCGIOqlGCZPZYSf0hiGgvdk72psOftiSZ0b1akv6zkka91PJdy4Zke3n8slRVten0m_syw8-5_AJB36Zj)"
+   ]
   },
   {
    "cell_type": "code",
