--- a/10-ReAct/Aula_9_10_ReAct.ipynb
+++ b/10-ReAct/Aula_9_10_ReAct.ipynb
@@ -2183,12 +2183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "node_queue = collections.deque()\n",
     "node_queue.append(\"\")\n",
+    "\n",
+    "next_tool_occurrences = {}\n",
+    "for t in [\"R\", \"A\", \"T\", \"S\", \"F\"]:\n",
+    "    next_tool_occurrences[t] = 0\n",
     "\n",
     "adj_list = {}\n",
     "\n",
@@ -2211,9 +2215,10 @@
     "            if sequence[:len(current_node)] != current_node:\n",
     "                continue\n",
     "            \n",
-    "            total_occurrences += occurrences\n",
-    "\n",
     "            next_char = sequence[len(current_node)]\n",
+    "\n",
+    "            total_occurrences += occurrences\n",
+    "            next_tool_occurrences[next_char] += occurrences\n",
     "\n",
     "            if next_char in sequences:\n",
     "                sequences[next_char] += occurrences\n",
@@ -2302,10 +2307,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'R': 137, 'A': 49, 'T': 33, 'S': 58, 'F': 1}"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next_tool_occurrences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 0.3475177304964539,\n",
+       " 'T': 0.23404255319148937,\n",
+       " 'S': 0.41134751773049644,\n",
+       " 'F': 0.0070921985815602835}"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_tool_occurrences = 0\n",
+    "for tool in next_tool_occurrences:\n",
+    "    if tool == \"R\":\n",
+    "        continue\n",
+    "\n",
+    "    total_tool_occurrences += next_tool_occurrences[tool]\n",
+    "\n",
+    "\n",
+    "next_tool_probs = {}\n",
+    "for tool in next_tool_occurrences:\n",
+    "    if tool == \"R\":\n",
+    "        continue\n",
+    "\n",
+    "    next_tool_probs[tool] = next_tool_occurrences[tool]/total_tool_occurrences\n",
+    "\n",
+    "next_tool_probs"
+   ]
   }
  ],
  "metadata": {
