--- a/10-ReAct/Aula_9_10_ReAct.ipynb
+++ b/10-ReAct/Aula_9_10_ReAct.ipynb
@@ -32,20 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python38\\lib\\site-packages\\thinc\\compat.py:36: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
-      "  hasattr(torch, \"has_mps\")\n",
-      "c:\\Python38\\lib\\site-packages\\thinc\\compat.py:37: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
-      "  and torch.has_mps  # type: ignore[attr-defined]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os #Operações com o SO (arquivos)\n",
     "import json #Leitura/escrita de arquivos JSON\n",
@@ -139,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3053,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3420,6 +3409,81 @@
     "print_context(14)\n",
     "print_separator()\n",
     "print_answers(14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Corretor\n",
+    "\n",
+    "Analisando as respostas indicadas como corretas pelo corretor, apenas 1 questão não possui resposta inteiramente correta, que pede um levantamente de pessoas e universidades:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Frank McPhee, Princeton\n",
+      "- Bernie Flowers, Purdue\n",
+      "- Eddie Bell, Pennsylvania\n",
+      "- Tom Stolhandske, Texas\n",
+      "- Tom Scott, Virginia\n",
+      "- Joe Collier, Northwestern\n",
+      "- Don Branby, Colorado\n",
+      "- Buck Martin, Georgia Tech\n",
+      "- Steve Mellinger, Kentucky\n",
+      "- Ed Luke, Michigan State\n",
+      "- Harry Babcock, Georgia\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_results[24][\"gold_answer\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frank McPhee of Princeton, Bernie Flowers of Purdue, Eddie Bell of Pennsylvania, Tom Stolhandske of Texas, Tom Scott of Virginia, Joe Collier of Northwestern, Buck Martin of Georgia Tech, Steve Mellinger of Kentucky, and Ed Luke of Michigan State.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_results[24][\"answer\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos obsevar que o agente levanta corretamente 9 das 11 pessoas necessárias, sendo uma resposta não interamente correta, mas também não interamente incorreta:\n",
+    "\n",
+    "Correto|Agente\n",
+    "-|-\n",
+    "Frank McPhee, Princeton | Frank McPhee of Princeton\n",
+    "Bernie Flowers, Purdue | Bernie Flowers of Purdue\n",
+    "Eddie Bell, Pennsylvania | Eddie Bell of Pennsylvania\n",
+    "Tom Stolhandske, Texas | Tom Stolhandske of Texas\n",
+    "Tom Scott, Virginia | Tom Scott of Virginia\n",
+    "Joe Collier, Northwestern | Joe Collier of Northwestern\n",
+    "Don Branby, Colorado | \n",
+    "Buck Martin, Georgia Tech | Buck Martin of Georgia Tech \n",
+    "Steve Mellinger, Kentucky | Steve Mellinger of Kentucky\n",
+    "Ed Luke, Michigan State | Ed Luke of Michigan State  \n",
+    "Harry Babcock, Georgia | "
    ]
   },
   {
