10-Correção da questão 24

--- a/10-ReAct/Aula_9_10_ReAct.ipynb
+++ b/10-ReAct/Aula_9_10_ReAct.ipynb
@@ -3417,7 +3417,7 @@
    "source": [
     "### Corretor\n",
     "\n",
-    "Analisando as respostas indicadas como corretas pelo corretor, apenas 1 questão não possui resposta inteiramente correta, que pede um levantamente de pessoas e universidades:"
+    "Analisando as respostas indicadas como corretas pelo corretor, apenas 1 questão não possui resposta inteiramente correta, que pede um levantamento de jogadores:"
    ]
   },
   {
